--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Environmental Consultancy - Helping organisations achieve sustainability goals through clear, practical environmental advice." />
-  <title>GreenFlow Environmental Consultancy</title>
+  <title>Apex Science & Conservation Consultancy</title>
   <style>
     body {
       font-family: sans-serif;
@@ -56,7 +56,7 @@
 </head>
 <body>
   <header>
-    <h1>GreenFlow Environmental Consultancy</h1>
+    <h1>Apex Science & Conservation Consultancy</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#services">Services</a>
@@ -66,29 +66,29 @@
 
   <section id="about">
     <h2>About Us</h2>
-    <p>GreenFlow helps organisations achieve their sustainability goals through practical, clear, and effective environmental consultancy. We believe in actionable strategies that drive measurable impact for your business and the planet.</p>
+    <p>Apex helps organisations achieve their sustainability goals through practical, clear, and effective environmental consultancy. We believe in actionable strategies that drive measurable impact for your business and the planet.</p>
   </section>
 
   <section id="services">
     <h2>Our Services</h2>
     <ul>
-      <li>Carbon footprint analysis and reduction planning</li>
-      <li>Environmental compliance and reporting support</li>
-      <li>ISO 14001 system implementation guidance</li>
-      <li>Sustainability strategy development</li>
-      <li>Staff training and awareness sessions</li>
+      <li>SERVICE 1</li>
+      <li>SERVICE 2</li>
+      <li>SERVICE 3</li>
+      <li>SERVICE 4</li>
+      <li>SERVICE 5</li>
     </ul>
   </section>
 
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:info@greenflowconsultancy.com">info@greenflowconsultancy.com</a></p>
+    <p>Email: <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a></p>
     <p>LinkedIn: <a href="#">Connect with us</a></p>
-    <a href="mailto:info@greenflowconsultancy.com" class="button">Email Us</a>
+    <a href="mailto:bphillips.consultancy@gmail.com" class="button">Email Us</a>
   </section>
 
   <footer>
-    &copy; 2025 GreenFlow Environmental Consultancy. All rights reserved.
+    &copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.
   </footer>
 </body>
 </html>
