--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Environmental Consultancy - Helping organisations achieve sustainability goals through clear, practical environmental advice." />
+  <meta name="description" content="Apex Science & Conservation Consultancy - Bridging ecology, people & practice" />
   <title>Apex Science & Conservation Consultancy</title>
   <style>
     body {
@@ -60,6 +60,7 @@
     <nav>
       <a href="#about">About</a>
       <a href="#services">Services</a>
+      <a href="#testimonials">Testimonials</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -67,17 +68,27 @@
   <section id="about">
     <h2>About Us</h2>
     <p>Apex helps organisations achieve their sustainability goals through practical, clear, and effective environmental consultancy. We believe in actionable strategies that drive measurable impact for your business and the planet.</p>
+    <p>DR BEN PHILLIPS - DETAILS</p>
+    <p>DR EMILY DUNCAN - DETAILS</p>
   </section>
 
   <section id="services">
     <h2>Our Services</h2>
     <ul>
-      <li>SERVICE 1</li>
-      <li>SERVICE 2</li>
-      <li>SERVICE 3</li>
-      <li>SERVICE 4</li>
-      <li>SERVICE 5</li>
+      <li>Evidence synthesis - DETAILS</li>
+      <li>Geographical Information Systems (GIS) - Spatial mapping, modelling and analysis.</li>
+      <li>Data analysis - DETAILS</li>
+      <li>Questionnaire survey design</li>
+      <li>General consultancy - ecological advice, land management, etc. FOR WHO?</li>
+      <li>WHAT ELSE EMILY?</li>
     </ul>
+  </section>
+
+  <section id="testimonials">
+    <h2>Testimonials</h2>
+    <p>"TESTIMONIAL 1" Sam Manning, The Woodland Trust
+    <p>"TESTIMONIAL 2" PERSON 2, ORGANISATION 2
+    <p>"TESTIMONIAL 3" PERSON 3, ORGANISATION 3
   </section>
 
   <section id="contact">
