--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a></p>
-    <p>LinkedIn: <a href="#">Connect with us</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Connect with us</a></p>
     <a href="mailto:bphillips.consultancy@gmail.com" class="button">Email Us</a>
   </section>
 
