--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
   <section id="services">
     <h2>Our Services</h2>
     <ul>
-      <li>Evidence synthesis - DETAILS</li>
-      <li>Geographical Information Systems (GIS) - Spatial mapping, modelling and analysis.</li>
-      <li>Data analysis - DETAILS</li>
-      <li>Questionnaire survey design</li>
-      <li>General consultancy - ecological advice, land management, etc. FOR WHO?</li>
+      <p><b>1. Evidence synthesis</b></p>
+      <p>DETAILS. Example project(s)</p>
+      <li>The Woodland Trust.</li>
+      <p>2. Geographical Information Systems (GIS) - Spatial mapping, modelling and analysis. Example project(s): Light pollution national maps.</li>
+      <li>Data analysis - DETAILS. Example project(s): Natural England / Google Trends.</li>
+      <li>Questionnaire survey design. Example project(s): ReBLS w/ Natural England,  The Wildlife Trusts, fishing nets, pollinators.</li>
+      <li>General consultancy - ecological advice, land management, road verges, marine environment, estates, business premises, gardens, public spaces. Example project(s): XXXXXX.</li>
       <li>WHAT ELSE EMILY?</li>
     </ul>
   </section>
