--- a/index.html
+++ b/index.html
@@ -74,16 +74,41 @@
 
   <section id="services">
     <h2>Our Services</h2>
-    <ul>
       <p><b>1. Evidence synthesis</b></p>
-      <p>DETAILS. Example project(s)</p>
+      <p>DETAILS</p>
+      <p>Example project(s):</p>
       <li>The Woodland Trust.</li>
-      <p>2. Geographical Information Systems (GIS) - Spatial mapping, modelling and analysis. Example project(s): Light pollution national maps.</li>
-      <li>Data analysis - DETAILS. Example project(s): Natural England / Google Trends.</li>
-      <li>Questionnaire survey design. Example project(s): ReBLS w/ Natural England,  The Wildlife Trusts, fishing nets, pollinators.</li>
-      <li>General consultancy - ecological advice, land management, road verges, marine environment, estates, business premises, gardens, public spaces. Example project(s): XXXXXX.</li>
-      <li>WHAT ELSE EMILY?</li>
-    </ul>
+      <p></p>
+      <p><b>2. Geographical Information Systems (GIS)</b></p>
+      <p>Spatial mapping, modelling and analysis. DETAILS</p>
+      <li>Example project(s): Light pollution national maps.</li>
+      <p></p>
+      <p><b>3. Data analysis</b></p>
+      <p>DETAILS</p>
+      <p>Example project(s):</p>
+      <li>Natural England / Google Trends.</li>
+      <p></p>
+      <p><b>4. Questionnaire survey design</b></p>
+      <p>DETAILS</p>
+      <p>Example project(s):</p>
+      <li>ReBLS w/ Natural England</li>
+      <li>The Wildlife Trusts</li>
+      <li>Fishing nets</li>
+      <li>Pollinators</li>
+      <p></p>
+      <p><b>5. General consultancy</b></p>
+      <p>Ecological advice, land management, road verges, marine environment, estates, business premises, gardens, public spaces.</p>]
+      <p>Example project(s):</p>
+      <li>Road verges etc.</li>
+      <li>Emily's grant panel for Defra</li>
+      <p></p>
+      <p><b>6. Grant writing</b></p>
+      <p>DETAILS</p>
+      <p></p>
+      <p><b>X. ANYTHING ELSE EMILY?</b></p>
+      <p></p>
+      <p>Don't hesitate to get in touch if you have a requirement that isn't listed here - we will advise if it is something we can help you with, or point you in the right direction if we can.</p>
+
   </section>
 
   <section id="testimonials">
@@ -96,7 +121,7 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Connect with us</a></p>
+    <p>LinkedIn: Connect with <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Ben</a> / <a href="https://www.linkedin.com/in/emily-duncan-7a324b64">Emily</a></p>
     <a href="mailto:bphillips.consultancy@gmail.com" class="button">Email Us</a>
   </section>
 
