--- a/index.html
+++ b/index.html
@@ -74,40 +74,41 @@
 
   <section id="services">
     <h2>Our Services</h2>
-      <p><b>1. Evidence synthesis</b></p>
-      <p>DETAILS</p>
-      <p>Example project(s):</p>
-      <li>The Woodland Trust.</li>
-      <p></p>
-      <p><b>2. Geographical Information Systems (GIS)</b></p>
-      <p>Spatial mapping, modelling and analysis. DETAILS</p>
-      <li>Example project(s): Light pollution national maps.</li>
-      <p></p>
-      <p><b>3. Data analysis</b></p>
-      <p>DETAILS</p>
-      <p>Example project(s):</p>
-      <li>Natural England / Google Trends.</li>
-      <p></p>
-      <p><b>4. Questionnaire survey design</b></p>
-      <p>DETAILS</p>
-      <p>Example project(s):</p>
-      <li>ReBLS w/ Natural England</li>
-      <li>The Wildlife Trusts</li>
-      <li>Fishing nets</li>
-      <li>Pollinators</li>
-      <p></p>
-      <p><b>5. General consultancy</b></p>
-      <p>Ecological advice, land management, road verges, marine environment, estates, business premises, gardens, public spaces.</p>]
-      <p>Example project(s):</p>
-      <li>Road verges etc.</li>
-      <li>Emily's grant panel for Defra</li>
-      <p></p>
-      <p><b>6. Grant writing</b></p>
-      <p>DETAILS</p>
-      <p></p>
-      <p><b>X. ANYTHING ELSE EMILY?</b></p>
-      <p></p>
-      <p>Don't hesitate to get in touch if you have a requirement that isn't listed here - we will advise if it is something we can help you with, or point you in the right direction if we can.</p>
+    <p><b>1. Evidence synthesis</b></p>
+    <p>We are experienced in collating evidence to a rigorous scientific standard.</p>
+    <p>Example project(s):</p>
+    <li>Reviews of the evidence for enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators with Buglife</a>, and <a href="https://doi.org/10.1111/1365-2664.13556">for broad environmental and social benefits</a>.<li> 
+    <li>A review of evidence for environmental links between forests and oceans for The Woodland Trust.</li>
+    <p> </p>
+    <p><b>2. Geographical Information Systems (GIS)</b></p>
+    <p>Spatial mapping, modelling and analysis. DETAILS</p>
+    <li>Example project(s): Light pollution national maps.</li>
+    <p> </p>
+    <p><b>3. Data analysis</b></p>
+    <p>DETAILS</p>
+    <p>Example project(s):</p>
+    <li>Natural England / Google Trends.</li>
+    <p> </p>
+    <p><b>4. Questionnaire survey design</b></p>
+    <p>DETAILS</p>
+    <p>Example project(s):</p>
+    <li>ReBLS w/ Natural England</li>
+    <li>The Wildlife Trusts</li>
+    <li>Fishing nets</li>
+    <li>Pollinators</li>
+    <p> </p>
+    <p><b>5. General consultancy</b></p>
+    <p>Ecological advice, land management, road verges, marine environment, estates, business premises, gardens, public spaces.</p>]
+    <p>Example project(s):</p>
+    <li>Road verges etc.</li>
+    <li>Emily's grant panel for Defra</li>
+    <p> </p>
+    <p><b>6. Grant writing</b></p>
+    <p>DETAILS</p>
+    <p> </p>
+    <p><b>X. ANYTHING ELSE EMILY?</b></p>
+    <p> </p>
+    <p>Don't hesitate to get in touch if you have a requirement that isn't listed here - we will advise if it is something we can help you with, or point you in the right direction if we can.</p>
 
   </section>
 
