--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <p style="margin-top: 3rem;"><b>Dr Ben Phillips</b></p>
     <p>Ben is a nature conservation scientist with 10+ years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
     <p>His work combines ecological and social sciences using a collaborative, solution-focused approach — partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and directly relevant to real-world decisions.</p>
-    <p>Ben 𝐰𝐨𝐫𝐤s 𝐚𝐜𝐫𝐨𝐬𝐬 𝐭𝐰𝐨 𝐤𝐞𝐲 𝐚𝐫𝐞𝐚𝐬:</p>
-    <p>🌿 𝐄𝐜𝐨𝐥𝐨𝐠𝐢𝐜𝐚𝐥 𝐒𝐲𝐬𝐭𝐞𝐦𝐬 – Conducting ecological surveys, field experiments, GIS analysis, and evidence reviews to inform conservation across landscapes — from urban greenspaces to farmland to forests.</p>
-    <p>🔍 𝐏𝐞𝐨𝐩𝐥𝐞 & 𝐍𝐚𝐭𝐮𝐫𝐞 – Exploring how people engage with nature — their attitudes, values and behaviours — using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
+    <p>Ben works across two key areas:</p>
+    <p>🌿 <b>Ecological Systems</b> - Conducting ecological surveys, field experiments, GIS analysis, and evidence reviews to inform conservation across landscapes - from urban greenspaces to farmland to forests.</p>
+    <p>🔍 <b>People & Nature</b> - Exploring how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
     <p style="margin-top: 3rem;"><b>Dr Emily Duncan</b></p>
     <p>Emily is... DETAILS</p>
     <p>DETAILS</p>
