--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
     
     <p style="margin-top: 3rem;"><b>2. Geographical Information Systems (GIS)</b></p>
     <p>Spatial mapping, modelling and analysis. DETAILS</p>
-    <li>Example project(s): Light pollution national maps.</li>
+    <p>Example project(s):</p>
+    <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution across Great Britain</a>.</li>
+    <li>Comparing levels of light pollutions between local authorities and habitats across the United Kingdom.</li>
 
     <p style="margin-top: 3rem;"><b>3. Data analysis</b></p>
     <p>DETAILS</p>
@@ -101,10 +103,9 @@
     <p style="margin-top: 3rem;"><b>4. Questionnaire survey design</b></p>
     <p>DETAILS</p>
     <p>Example project(s):</p>
-    <li>ReBLS w/ Natural England</li>
-    <li>The Wildlife Trusts</li>
-    <li>Fishing nets</li>
-    <li>Pollinators</li>
+    <li>Questionnaire survey design, including <a href="https://doi.org/10.1002/pan3.70014">a major national survey of 18,000 adults across England with Natural England</a> and an online survey campaign with The Wildlife Trusts as part of their 30 Days Wild campaign.</li>
+    <li>An <a, href="https://doi.org/10.1002/pan3.10168">online survey about people's attitudes and behaviours relating to pollinators</a>, and a survey of fishers in Africa to understand their use and disposal of nets to reduce marine megafauna entanglements</li>
+    <li>DIGITAL DATA SOURCES w/ NATURAL ENGLAND</li>
     
     <p style="margin-top: 3rem;"><b>5. General consultancy</b></p>
     <p>Ecological advice, land management, road verges, marine environment, estates, business premises, gardens, public spaces.</p>]
