--- a/index.html
+++ b/index.html
@@ -119,9 +119,12 @@
 
   <section id="testimonials">
     <h2>Testimonials</h2>
-    <p>"TESTIMONIAL 1" Sam Manning, The Woodland Trust
-    <p>"TESTIMONIAL 2" PERSON 2, ORGANISATION 2
-    <p>"TESTIMONIAL 3" PERSON 3, ORGANISATION 3
+    <p style="margin-top: 2rem;"><i>"TESTIMONIAL 1"</i></p>
+    <p>Sam Manning, The Woodland Trust</p>
+    <p style="margin-top: 2rem;"><i>"TESTIMONIAL 2"</i></p>
+    <p>PERSON 2, ORGANISATION 2</p>
+    <p style="margin-top: 2rem;"><i>"TESTIMONIAL 3"</i></p>
+    <p>PERSON 3, ORGANISATION 3</p>
   </section>
 
   <section id="contact">
