--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <p>🌿 <b>Ecological Systems</b> - Conducting ecological surveys, field experiments, GIS analysis, and evidence reviews to inform conservation across landscapes - from urban greenspaces to farmland to forests.</p>
     <p>🔍 <b>People & Nature</b> - Exploring how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
     <p style="margin-top: 3rem;"><b>Dr Emily Duncan</b></p>
-    <p>Emily is... DETAILS</p>
+    <p>Emily is... EMILY TO COMPLETE</p>
     <p>DETAILS</p>
   </section>
 
