--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
       padding: 1rem;
       font-size: 0.9rem;
     }
-    h1, h2, h3 {
+    h1{
       color: white;
+    }
+    h2, h3 {
+      color: #2e7d32;
     }
     .button {
       background-color: #2e7d32;
