--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       padding: 1rem;
       font-size: 0.9rem;
     }
-    h1{
+    header h1 {
       color: white;
     }
-    h2, h3 {
+    h1, h2, h3 {
       color: #2e7d32;
     }
     .button {
@@ -101,7 +101,7 @@
     <p style="margin-top: 3rem;"><b>3. Studies of People's Attitudes and Behaviours</b></p>
     <p>DETAILS</p>
     <p>Past example projects:</p>
-    <li>Questionnaire survey design, including <a href="https://doi.org/10.1002/pan3.70014">a major national survey of 18,000 adults across England with Natural England</a> and an online survey campaign with The Wildlife Trusts as part of their 30 Days Wild campaign.</li>
+    <li>Questionnaire survey design, including <a href="https://doi.org/10.1002/pan3.70014">a major national survey of 18,000 adults across England with Natural England</a> and <a, href="https://news.exeter.ac.uk/environment-and-sustainability-institute/scientists-want-your-view-on-watching-nature-through-the-window/">an online survey campaign with The Wildlife Trusts as part of their 30 Days Wild campaign</a>.</li>
     <li>An <a, href="https://doi.org/10.1002/pan3.10168">online survey about people's attitudes and behaviours relating to pollinators</a>, and a survey of fishers in Africa to understand their use and disposal of nets to reduce marine megafauna entanglements.</li>
     <li>Analysis of public attitudes and behaviour relating to nature using large survey, social media and digital data sources, <a, href="https://doi.org/10.1002/pan3.10381">e.g. with Natural England</a>.</li>
     
