--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
     <p>🌿 <b>Ecological Systems</b> - Conducting ecological surveys, field experiments, GIS analysis, and evidence reviews to inform conservation across landscapes - from urban greenspaces to farmland to forests.</p>
     <p>🔍 <b>People & Nature</b> - Exploring how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
     <p> EXPAND TO BE MORE INCLUSIVE OF EMILY'S WORK</p>
+
+    <p style="margin-top: 3rem;"><b>Who we are...</b></p>
     
     <p style="margin-top: 3rem;"><b>Dr Ben Phillips</b></p>
     <p>Ben is a nature conservation scientist with 10+ years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
     <p>His work combines ecological and social sciences using a collaborative, solution-focused approach — partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and directly relevant to real-world decisions.</p>
+    
     <p style="margin-top: 3rem;"><b>Dr Emily Duncan</b></p>
     <p>Emily is... EMILY TO COMPLETE</p>
     <p>DETAILS</p>
