--- a/testimonials.html
+++ b/testimonials.html
@@ -20,8 +20,12 @@
 
   <section>
     <h2>Testimonials</h2>
-    <!-- Retain all testimonials content here -->
-    <p>Copy the testimonials section content here from your current file.</p>
+    <p style="margin-top: 2rem;"><i>"TESTIMONIAL 1"</i></p>
+    <p>Sam Manning, The Woodland Trust</p>
+    <p style="margin-top: 2rem;"><i>"TESTIMONIAL 2"</i></p>
+    <p>PERSON 2, ORGANISATION 2</p>
+    <p style="margin-top: 2rem;"><i>"TESTIMONIAL 3"</i></p>
+    <p>PERSON 3, ORGANISATION 3</p>
   </section>
 
   <footer>
