--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,9 @@
 
   <section>
     <h2>Contact Us</h2>
-    <!-- Retain all contact content here -->
-    <p>Copy the contact section content here from your current file.</p>
+    <p>Email: <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a></p>
+    <p>LinkedIn: Connect with <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Ben</a> / <a href="https://www.linkedin.com/in/emily-duncan-7a324b64">Emily</a></p>
+    <a href="mailto:bphillips.consultancy@gmail.com" class="button">Email Us</a>
   </section>
 
   <footer>
