--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
 
   <section>
     <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a></p>
-    <p>LinkedIn: Connect with <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Ben</a> / <a href="https://www.linkedin.com/in/emily-duncan-7a324b64">Emily</a></p>
+    <p><b>Email:</b> <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a></p>
     <a href="mailto:bphillips.consultancy@gmail.com" class="button">Email Us</a>
+    <p><b>LinkedIn:</b> Connect with <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Ben</a> / <a href="https://www.linkedin.com/in/emily-duncan-7a324b64">Emily</a></p>
   </section>
 
   <footer>
