--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,10 @@
 
   <section>
     <h2>Contact Us</h2>
-    <p><b>Email:</b> <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a></p>
-    <a href="mailto:bphillips.consultancy@gmail.com" class="button">Email Us</a>
+    <p><a href="mailto:bphillips.consultancy@gmail.com" class="button">Email Us</a>
+      <b>Email:</b> <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a>
+    </p>
+    
     <p><b>LinkedIn:</b> Connect with <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Ben</a> / <a href="https://www.linkedin.com/in/emily-duncan-7a324b64">Emily</a></p>
   </section>
 
