--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <p>🌿 <b>Ecological Systems</b> - Conducting ecological surveys, field experiments, GIS analysis, and evidence reviews to inform conservation across landscapes - from urban greenspaces to farmland to forests to oceans.</p>
     <p>🔍 <b>People & Nature</b> - Exploring how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
 
-    <h2 style="margin-top: 3rem;"><b>Who we are...</b></h2>
+    <h2 style="margin-top: 3rem;">Who we are...</h2>
     <p><b>Dr Ben Phillips</b></p>
     <p>Ben is a nature conservation scientist with 10+ years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
 
     <p style="margin-top: 2rem;"><b>Dr Emily Duncan</b></p>
-    <p>Emily is... EMILY TO COMPLETE</p>
+    <p style="margin-bottom: 2rem;">Emily is... EMILY TO COMPLETE</p>
   </section>
 
   <footer>
