--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>Ben is a nature conservation scientist with 10+ years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
 
     <p style="margin-top: 2rem;"><b>Dr Emily Duncan</b></p>
-    <p style="margin-bottom: 2rem;">Emily is... EMILY TO COMPLETE</p>
+    <p>Emily is... EMILY TO COMPLETE</p>
   </section>
 
   <footer>
