--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
     <p>🔍 <b>People & Nature</b> - Exploring how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
 
     <h2 style="margin-top: 3rem;">Who we are...</h2>
+    <div class="profile">
+  <img src="Photo-Ben.jpg" alt="Dr Ben Phillips" class="profile-photo">
+  <div>
     <p><b>Dr Ben Phillips</b></p>
     <p>Ben is a nature conservation scientist with 10+ years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
-
+    <p>His work combines ecological and social sciences using a collaborative, solution-focused approach — partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and directly relevant to real-world decisions.</p>
+  </div>
+</div>
     <p style="margin-top: 2rem;"><b>Dr Emily Duncan</b></p>
     <p>Emily is... EMILY TO COMPLETE</p>
   </section>
