--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <h2 style="margin-top: 3rem;">Who we are...</h2>
     <div class="profile">
-  <img src="Photo-Ben.jpg" alt="Dr Ben Phillips" class="profile-photo">
+  <img src="images/Photo-Ben.jpg" alt="Dr Ben Phillips" class="profile-photo">
   <div>
     <p><b>Dr Ben Phillips</b></p>
     <p>Ben is a nature conservation scientist with 10+ years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
