--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
     <p>His work combines ecological and social sciences using a collaborative, solution-focused approach — partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and directly relevant to real-world decisions.</p>
   </div>
 </div>
+
+    <div class="profile">
+  <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan class="profile-photo">
+  <div>
     <p style="margin-top: 2rem;"><b>Dr Emily Duncan</b></p>
     <p>Emily is... EMILY TO COMPLETE</p>
+    <p>MORE DETAILS - EMILY TO COMPLETE</p>
+  </div>
+</div>
+    
   </section>
 
   <footer>
