--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 
     <div class="profile">
-  <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan class="profile-photo">
+  <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan" class="profile-photo">
   <div>
     <p style="margin-top: 2rem;"><b>Dr Emily Duncan</b></p>
     <p>Emily is... EMILY TO COMPLETE</p>
