--- a/testimonials.html
+++ b/testimonials.html
@@ -20,12 +20,12 @@
 
   <section>
     <h2>Testimonials</h2>
-    <p style="margin-top: 2rem;"><i>"TESTIMONIAL 1"</i></p>
-    <p>Sam Manning, The Woodland Trust</p>
-    <p style="margin-top: 2rem; text-align: right;"><i>"TESTIMONIAL 2"</i></p>
-    <p style="text-align: right;">PERSON 2, ORGANISATION 2</p>
-    <p style="margin-top: 2rem;"><i>"TESTIMONIAL 3"</i></p>
-    <p>PERSON 3, ORGANISATION 3</p>
+    <p style="margin-top: 2rem; padding-left: 20%;"><i>"TESTIMONIAL 1"</i></p>
+    <p style="padding-left: 20%;">Sam Manning, The Woodland Trust</p>
+    <p style="margin-top: 2rem; text-align: right; padding-right: 20%;"><i>"TESTIMONIAL 2"</i></p>
+    <p style="text-align: right; padding-right: 20%;">PERSON 2, ORGANISATION 2</p>
+    <p style="margin-top: 2rem; padding-left: 20%;"><i>"TESTIMONIAL 3"</i></p>
+    <p style="padding-left: 20%;">PERSON 3, ORGANISATION 3</p>
   </section>
 
   <footer>
