--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <section>
     <h2>About Us</h2>
     <p>Apex helps organisations achieve their sustainability goals through practical, clear, and effective environmental consultancy. We believe in actionable strategies that drive measurable impact for your business and the planet.</p>
+    <p>We partner with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and directly relevant to real-world decisions.</p>
     <p>We work across two key areas:</p>
     <p>🌿 <b>Ecological Systems</b> - Conducting ecological surveys, field experiments, GIS analysis, and evidence reviews to inform conservation across landscapes - from urban greenspaces to farmland to forests to oceans.</p>
     <p>🔍 <b>People & Nature</b> - Exploring how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
@@ -31,7 +32,9 @@
   <div>
     <p><b>Dr Ben Phillips</b></p>
     <p>Ben is a nature conservation scientist with 10+ years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
-    <p>His work combines ecological and social sciences using a collaborative, solution-focused approach — partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and directly relevant to real-world decisions.</p>
+    <p>His work combines ecological and social sciences using a collaborative, solution-focused approach.</p>
+    <p>Particular focuses have been on pollinator conservation, management of road verges, and understanding people's attitudes and behaviour relating to nature.</p>
+    <p></p>
   </div>
 </div>
 
@@ -39,9 +42,9 @@
   <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan" class="profile-photo">
   <div>
     <p style="margin-top: 2rem;"><b>Dr Emily Duncan</b></p>
-    <p>Emily is... EMILY TO COMPLETE</p>
-    <p>MORE DETAILS - EMILY TO COMPLETE</p>
-  </div>
+    <p>Emily is a conservation biologist with 10+ years' experience working in marine research globally.</p>
+    <p>Much of her research has focused on marine megafauna and plastic pollution.</p>
+    <p>She is experienced in delivering large collaborative international grants, and places policy and community engagement at the heart of her work</p>
 </div>
     
   </section>
