--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="profile">
   <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan" class="profile-photo">
   <div>
-    <p style="margin-top: 2rem;"><b>Dr Emily Duncan</b></p>
+    <p><b>Dr Emily Duncan</b></p>
     <p>Emily is a conservation biologist with 10+ years' experience working in marine research globally.</p>
     <p>Much of her research has focused on marine megafauna and plastic pollution, for which she was named on the Forbes 30 Under 30 list.</p>
     <p>She is experienced in delivering large collaborative international projects, and places policy and community engagement at the heart of her work.</p>
