--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
     <p>🔍 <b>People & Nature</b> - Exploring how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
 
     <h2 style="margin-top: 3rem;">Who we are...</h2>
-    <div class="profile">
-  <img src="images/Photo-Ben.jpg" alt="Dr Ben Phillips" class="profile-photo">
+    <div class="profile" style="display: flex; align-items: flex-start; gap: 1rem; margin-top: 2rem;">
+  <img src="images/Photo-Ben.jpg" alt="Dr Ben Phillips" class="profile-photo" style="width: 150px; height: auto; border-radius: 8px;">
   <div>
     <p><b>Dr Ben Phillips</b></p>
     <p>Ben is a nature conservation scientist with 10+ years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
     <p>His work combines ecological and social sciences using a collaborative, solution-focused approach.</p>
     <p>Particular focuses have been on pollinator conservation, management of road verges, and understanding people's attitudes and behaviour relating to nature.</p>
-    <p></p>
   </div>
 </div>
 
-    <div class="profile">
-  <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan" class="profile-photo">
+<div class="profile" style="display: flex; align-items: flex-start; gap: 1rem; margin-top: 2rem;">
+  <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan" class="profile-photo" style="width: 150px; height: auto; border-radius: 8px;">
   <div>
     <p><b>Dr Emily Duncan</b></p>
     <p>Emily is a conservation biologist with 10+ years' experience working in marine research globally.</p>
     <p>Much of her research has focused on marine megafauna and plastic pollution, for which she was named on the Forbes 30 Under 30 list.</p>
     <p>She is experienced in delivering large collaborative international projects, and places policy and community engagement at the heart of her work.</p>
+  </div>
 </div>
     
   </section>
