--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <img src="images/Photo-Ben.jpg" alt="Dr Ben Phillips" style="width: 150px; height: auto; border-radius: 8px; margin-top: 0.25rem;">
   <div style="margin-top: 0;">
     <p style="margin-top: 0;"><b>Dr Ben Phillips</b></p>
-    <p>Ben is a nature conservation scientist with 10+ years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
+    <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
     <p>His work combines ecological and social sciences using a collaborative, solution-focused approach.</p>
-    <p>Particular focuses have been on pollinator conservation, management of road verges, and understanding people's attitudes and behaviour relating to nature.</p>
+    <p>Particular focuses have included pollinator conservation, management of road verges, and understanding people's attitudes and behaviour relating to nature.</p>
   </div>
 </div>
 
@@ -42,9 +42,9 @@
   <img src="images/Photo-Emily.jpg" alt="Dr Emily Duncan" style="width: 150px; height: auto; border-radius: 8px; margin-top: 0.25rem;">
   <div style="margin-top: 0;">
     <p style="margin-top: 0;"><b>Dr Emily Duncan</b></p>
-    <p>Emily is a conservation biologist with 10+ years' experience working in marine research globally.</p>
-    <p>Much of her research has focused on marine megafauna and plastic pollution, for which she was named on the Forbes 30 Under 30 list.</p>
-    <p>She is experienced in delivering large collaborative international projects, and places policy and community engagement at the heart of her work.</p>
+    <p>Emily is a conservation biologist with more than a decade of experience working in marine research across the world.</p>
+    <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the prestigious Forbes 30 Under 30 list.</p>
+    <p>She is experienced in delivering large collaborative international projects, and positions policy and community engagement at the heart of her work.</p>
   </div>
 </div>
     
