--- a/services.html
+++ b/services.html
@@ -23,10 +23,10 @@
     
     <p style="margin-top: 3rem;"><b>1. Evidence Synthesis</b></p>
     <p>We are experienced in collating evidence (on a wide variety of topics) to a rigorous scientific standard.</p>
-    <p>Our experience includes:</p>
-    <li>Reviewing evidence for enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> with the conservation charity Buglife, and <a href="https://doi.org/10.1111/1365-2664.13556">for broader environmental and social benefits</a>.</li> 
-    <li>Reviewing evidence for environmental links between forests and oceans for The Woodland Trust.</li>
-    <li>ADD ONE OR MORE OF EMILY's REVIEWS</li>
+    <p>Our experience includes reviewing evidence for...</p>
+    <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> with the conservation charity Buglife, and <a href="https://doi.org/10.1111/1365-2664.13556">for broader environmental and social benefits</a>.</li> 
+    <li>Environmental links between forests and oceans for The Woodland Trust.</li>
+    <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
     
     <p style="margin-top: 3rem;"><b>2. Data Analysis & Geographical Information Systems (GIS)</b></p>
     <p>We can assist with managing, visualising and analysing ecological and social data, including spatial mapping and analysis and using large, unwieldy datasets.</p>
