--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 
   <section>
     <h2>About Us</h2>
-    <p>At Apex Science & Conservation, we provide organisations with scientific support and produce nature conservation research that is both rigorous and directly relevant to real-world decisions.</p>
-    <p>We provide our time and expertise to NGOs, government agencies, and research institutions, allowing them to carry out projects that they may otherwise not be able.</p>
-    <p>We offer a wide range of services across three key areas:</p>
-    <p>🌿 <b>Ecological Systems</b> - Conducting ecological surveys, field experiments, GIS analysis, and evidence reviews to inform conservation across landscapes - from urban greenspaces to farmland to forests to oceans.</p>
-    <p>🔍 <b>People & Nature</b> - Exploring how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
-    <p>XX <b>General Science Consultancy</b> - General consultancy, grant writing services, and data analysis.</p>
-    <p>See the Services tab for further details of how we can help you.</p>
+    <h2>About Us</h2>
+    <p>At Apex Science & Conservation, we provide scientific support and deliver nature conservation research that is rigorous, practical, and directly relevant to real-world decisions.</p>
+    <p>We work in partnership with NGOs, government agencies, and research institutions, offering the expertise and capacity needed to carry out projects that might otherwise not be possible.</p>
+    <p>Our work spans three key areas:</p>
+    <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, and evidence reviews to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
+    <p>🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
+    <p>🛠️ <b>Consultancy & Data Services</b> – We offer grant writing support, general environmental consultancy, and data management and analysis services to organisations seeking clear, evidence-based insights.</p>
+    <p>For further details on how we can support your organisation, see our <b>Services</b> page.</p>
     <p>THIS NEEDS WORK AS DOESNT REALLY ALIGN WITH HOW SERVICES ARE SPLIT UP</p>
                                                                          
     
