--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <h2>About Us</h2>
     <p>At Apex Science & Conservation, we provide scientific support and deliver nature conservation research that is rigorous, practical, and directly relevant to real-world decisions.</p>
     <p>We work in partnership with NGOs, government agencies, and research institutions, offering the expertise and capacity needed to carry out projects that might otherwise not be possible.</p>
-    <p>Our work spans three key areas:</p>
+    <p style="margin-top: 1.5rem;">Our work spans three key areas:</p>
     <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, and evidence reviews to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
     <p>🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - using surveys, interviews and digital data to help shape more effective and inclusive conservation strategies.</p>
     <p>🛠️ <b>Consultancy & Data Services</b> – We offer grant writing support, general environmental consultancy, and data management and analysis services to organisations seeking clear, evidence-based insights.</p>
-    <p>For further details on how we can support your organisation, see our <b>Services</b> page.</p>
+    <p style="margin-top: 1.5rem;">For further details on how we can support your organisation, see our <b>Services</b> page.</p>
     <p>THIS NEEDS WORK AS DOESNT REALLY ALIGN WITH HOW SERVICES ARE SPLIT UP</p>
                                                                          
     
