--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <div style="margin-top: 0;">
     <p style="margin-top: 0;"><b>Dr Ben Phillips</b></p>
     <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that supports biodiversity, informs land management, and connects people with nature.</p>
-    <p>His work combines ecological and social sciences using a collaborative, solution-focused approach.</p>
-    <p>Particular focuses have included pollinator conservation, management of road verges, and understanding people's attitudes and behaviour relating to nature.</p>
+    <p>His work combines ecological and social sciences using a collaborative, solution-focused approach. 
+      Particular focuses have included pollinator conservation, management of road verges, and understanding people's attitudes and behaviour relating to nature.</p>
   </div>
 </div>
 
@@ -48,8 +48,8 @@
   <div style="margin-top: 0;">
     <p style="margin-top: 0;"><b>Dr Emily Duncan</b></p>
     <p>Emily is a conservation biologist with more than a decade of experience working in marine research across the world.</p>
-    <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the prestigious Forbes 30 Under 30 list.</p>
-    <p>She is experienced in delivering large collaborative international projects, and positions policy and community engagement at the heart of her work.</p>
+    <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the prestigious Forbes 30 Under 30 list. 
+      She is experienced in delivering large collaborative international projects, and positions policy and community engagement at the heart of her work.</p>
   </div>
 </div>
     
