--- a/testimonials.html
+++ b/testimonials.html
@@ -20,11 +20,11 @@
 
   <section>
     <h2>Testimonials</h2>
-    <p style="margin-top: 2rem; padding-left: 15%;"><i>"TESTIMONIAL 1"</i></p>
+    <p style="margin-top: 2rem; padding-left: 15%;"><i>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</i></p>
     <p style="padding-left: 15%;">Sam Manning, The Woodland Trust</p>
-    <p style="margin-top: 2rem; text-align: right; padding-right: 15%;"><i>"TESTIMONIAL 2"</i></p>
+    <p style="margin-top: 2rem; text-align: right; padding-right: 15%;"><i>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</i></p>
     <p style="text-align: right; padding-right: 15%;">PERSON 2, ORGANISATION 2</p>
-    <p style="margin-top: 2rem; padding-left: 15%;"><i>"TESTIMONIAL 3"</i></p>
+    <p style="margin-top: 2rem; padding-left: 15%;"><i>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa. Vestibulum ante ipsum primis in faucibus orci luctus."</i></p>
     <p style="padding-left: 15%;">PERSON 3, ORGANISATION 3</p>
   </section>
 
