--- a/services.html
+++ b/services.html
@@ -52,13 +52,13 @@
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     
     <p><b>4. General Consultancy Services & Grant Writing</b></p>
-    <p>We are also available to provide organisations and individuals with general constultancy services, including grant writing, programme design, 
+    <p>We are also available to provide organisations and individuals with general scientific constultancy services, including grant writing, programme development, 
       and practical advice on the management of both land and the marine environment.</p>
     <p>Our experience includes...</p>
     <li>Grant writing - We have a wealth of experience in writing and reviewing grants, EMILY's AWARDED GRANTS AND EMILY'S GRANT PANEL FOR DEFRA.</li>
-    <li>Project management - We have been responsible for developing, managing and delivering research programmes, so can offer guidance  and support in this area.
-    <li>Land management - Ben has experience of providing land management advice, particularly relating to the management of road verges, gardens, public spaces, farmland and pollinators.</li>
-    <li>Marine environment - EMILY'S MARINE EXPERIENCE
+    <li>Programme development - We have been responsible for developing, managing and delivering research programmes, so can also offer guidance  and support in this area.
+    <li>Habitat / land management - We are able to provide management guidance, with our experience particularly covering road verges, gardens, public spaces, farmland and pollinators.</li>
+    <li>Marine environment - We are also able to provide guidance on the marine environment, especially related to marine megafauna, fishing and microplastics. (EMILY TO EDIT)
 
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     
