--- a/services.html
+++ b/services.html
@@ -57,8 +57,8 @@
     <p>Our experience includes...</p>
     <li>Grant writing - We have a wealth of experience in writing and reviewing grants, EMILY's AWARDED GRANTS AND EMILY'S GRANT PANEL FOR DEFRA.</li>
     <li>Programme development - We have been responsible for developing, managing and delivering research programmes, so can also offer guidance  and support in this area.
-    <li>Habitat / land management - We are able to provide management guidance, with our experience particularly covering road verges, gardens, public spaces, farmland and pollinators.</li>
-    <li>Marine environment - We are also able to provide guidance on the marine environment, especially related to marine megafauna, fishing and microplastics. (EMILY TO EDIT)
+    <li>Habitat / land management - Particularly relating to road verges, public spaces, gardens, farmland and pollinators.</li>
+    <li>Marine environment - Particularly related to marine megafauna, fishing and microplastics. (EMILY TO EDIT)
 
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     
