--- a/services.html
+++ b/services.html
@@ -51,14 +51,14 @@
 
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     
-    <p><b>4. General Consultancy Services & Grant Writing</b></p>
-    <p>We are also available to provide organisations and individuals with general scientific constultancy services, including grant writing, programme development, 
-      and practical advice on the management of both land and the marine environment.</p>
+    <p><b>4. General Scientific Consultancy Services</b></p>
+    <p>We are also able to provide organisations with general scientific constultancy services, including grant writing, programme development, 
+      and practical management guidance relating to both the terrestrial and marine environments.</p>
     <p>Our experience includes...</p>
-    <li>Grant writing - We have a wealth of experience in writing and reviewing grants, EMILY's AWARDED GRANTS AND EMILY'S GRANT PANEL FOR DEFRA.</li>
-    <li>Programme development - We have been responsible for developing, managing and delivering research programmes, so can also offer guidance  and support in this area.
+    <li>Grant writing - We have a wealth of experience in writing and reviewing grants, including EMILY's AWARDED GRANTS AND EMILY'S GRANT PANEL FOR DEFRA.</li>
+    <li>Programme development - We have been responsible for developing, managing and delivering research programmes, so can offer support in this area.
     <li>Habitat / land management - Particularly relating to road verges, public spaces, gardens, farmland and pollinators.</li>
-    <li>Marine environment - Particularly related to marine megafauna, fishing and microplastics. (EMILY TO EDIT)
+    <li>Marine environment - Particularly relating to marine megafauna, fishing and microplastics. (EMILY TO EDIT)
 
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     
