--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
   <section>
     <h2>About Us</h2>
-    <p>At Apex Science & Conservation, we provide scientific support and deliver nature conservation research that is rigorous, practical, and directly relevant to real-world decisions.</p>
-    <p>We work in partnership with NGOs, government agencies, and research institutions, offering the expertise and capacity needed to carry out projects that might otherwise not be possible.</p>
+    <p style="text-align: center;">At Apex Science & Conservation, we provide scientific support and deliver nature conservation research that is rigorous, practical, and directly relevant to real-world decisions.</p>
+    <p style="text-align: center;">We work in partnership with NGOs, government agencies, and research institutions, offering the expertise and capacity needed to carry out projects that might otherwise not be possible.</p>
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     <p>Our work spans three key areas:</p>
     <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys, field experiments, GIS mapping and analysis, and evidence reviews to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
