--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
 
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     
-    <p><b>X. ANYTHING ELSE EMILY?</b></p>
+    <p><b>5. ANYTHING ELSE EMILY?</b></p>
 
     <p style="text-align: center; font-size: 1.5rem;">...</p>
     
